--- a/Maitrise_Recherche.bib
+++ b/Maitrise_Recherche.bib
@@ -19,6 +19,18 @@
   file = {C:\Users\paulc\Zotero\storage\EQTZR6DT\9781800370258.html}
 }
 
+@misc{:HttpsReglements:,
+  title = {{{https://reglements.ville.quebec.qc.ca/fr/resource/an/V.Q.Z.3\_FR\_004\_0001.pdf}}},
+  urldate = {2024-06-22},
+  howpublished = {https://reglements.ville.quebec.qc.ca/fr/resource/an/V.Q.Z.3\_FR\_004\_0001.pdf}
+}
+
+@misc{:LibKey:,
+  title = {{{LibKey}}},
+  urldate = {2024-06-23},
+  howpublished = {https://libkey.io/libraries/2410/openurl?sid=Compendex\&genre=article\&issn=1863-1703\&date=2023\&volume=17\&issue=4\&spage=1723\&epage=1731\&title=Signal\%2C+Image+and+Video+Processing\&atitle=Semantic+object-based+urban+scene+analysis+for+feature+fusion+of+VHR+imagery+and+Lidar+DSM\&aulast=Tabib+Mahmoudi\&aufirst=Fatemeh\&isbn=\&id=DOI:10.1007\%2Fs11760-022-02383-0\&ABBR=20224713146245}
+}
+
 @techreport{Aignel:ElaborationPolitique:2015,
   title = {{{\'E}laboration de la politique de stationnement. Portrait, diagnostic et assistance {\`a} la r{\'e}daction de la politique}},
   shorttitle = {{Rapport de diagnostic sur le stationnement}},
@@ -73,6 +85,22 @@
   urldate = {2024-05-21},
   abstract = {Car ownership is a major driver of household travel behavior, and has implications on transport demand, energy consumption, emission levels and land use. However, how curbside parking regulations (i.e. paid parking) affect car ownership remains unclear. Here, we employ a two-way fixed effect model using panel data and difference-in-differences estimations to determine the causal impact of changes in parking regulations and the impact of an extension of a city-wide parking policy in Barcelona. Our results show that the introduction of paid curbside parking to reduce non-resident/visitor demand had a positive impact on resident car ownership levels (who enjoy parking permits for free or at a very low cost -- 1{\texteuro}/week). Our calculation of the net social cost of reallocating curbside parking to residents indicates that the costs derived from the residents' parking subsidy and their likely increase in car usage can easily offset the benefits derived from visitor-trip deterrence, showing the relevance of the tradeoff between efficiency and acceptability.},
   keywords = {Car ownership,Difference-in-differences,Parking regulations,Policy evaluation}
+}
+
+@article{Amato:DeepLearning:2017,
+  title = {Deep Learning for Decentralized Parking Lot Occupancy Detection},
+  author = {Amato, Giuseppe and Carrara, Fabio and Falchi, Fabrizio and Gennaro, Claudio and Meghini, Carlo and Vairo, Claudio},
+  year = {2017},
+  month = apr,
+  journal = {Expert Systems with Applications},
+  volume = {72},
+  pages = {327--334},
+  issn = {0957-4174},
+  doi = {10.1016/j.eswa.2016.10.055},
+  urldate = {2024-06-24},
+  abstract = {A smart camera is a vision system capable of extracting application-specific information from the captured images. The paper proposes a decentralized and efficient solution for visual parking lot occupancy detection based on a deep Convolutional Neural Network (CNN) specifically designed for smart cameras. This solution is compared with state-of-the-art approaches using two visual datasets: PKLot, already existing in literature, and CNRPark-EXT. The former is an existing dataset, that allowed us to exhaustively compare with previous works. The latter dataset has been created in the context of this research, accumulating data across various seasons of the year, to test our approach in particularly challenging situations, exhibiting occlusions, and diverse and difficult viewpoints. This dataset is public available to the scientific community and is another contribution of our research. Our experiments show that our solution outperforms and generalizes the best performing approaches on both datasets. The performance of our proposed CNN architecture on the parking lot occupancy detection task, is comparable to the well-known AlexNet, which is three orders of magnitude larger.},
+  keywords = {Classification,Convolutional neural networks,Deep learning,Machine learning,Parking space dataset},
+  file = {C:\Users\paulc\Zotero\storage\Q8SFJBDE\S095741741630598X.html}
 }
 
 @article{Awan:ComparativeAnalysis:2020,
@@ -139,6 +167,39 @@
   address = {Via VIII Febbraio no2, Padua, Italy},
   abstract = {Inventory of road infrastructure represents a key application for integrated mobile mapping systems. The classical approach is to post-process geo-referenced imagery that has been captured from mobile mapping vans while driving within the road. Problems arise then within city centres where dense traffic and parking vehicles may often hinder occlusion free image captures of the objects of interest. We present an alternative solution in terms of a mobile PDA based geo-information system for pedestrian based road sign data collection which is targeted towards complementing the classical approach, particularly in city centres. The novel system consists of a mobile computing unit which is equipped with a GPS sensor, a digital camera, a standard mobile GIS software, and a user interface for minimal user intervention. Imagery for road sign inventory is firstly captured and geo-referenced in the street and then analyzed in a second, off-line processing step. We present a post-processing tool for semi-automated classification of road signs, and in parallel an identification of the sub-plate information, strongly supporting the processing of huge data sets, e.g., for the processing of data from complete city areas. The tool includes advanced image analysis methodology with (i) localization of selective key descriptors and regions of interest, (ii) the fitting of geometrical constraints to the extracted set of interest descriptors, and (iii) the matching of content information from the visual information within the sign plate. Text information on the sub-plate is first detected using a wavelet based texture filter, and then post-processed with segmentation operators and standard OCR software. The system has been successfully applied in a project on a complete inventory within the City of Graz, Austria, processing more than 30.000 road signs. The system achieved high accuracy ({$\approx$}90\%) in the automated image based classification of road signs on more than 20 different road sign classes. {\copyright} 2007 International Society for Photogrammetry and Remote Sensing. All rights reserved.},
   keywords = {Automation,Automobile drivers,Classification (of information),Data handling,Information systems,Information use,Mapping,Object recognition,Roads and streets,Textures,User interfaces}
+}
+
+@inproceedings{Berry:ParkingLot:2019,
+  title = {Parking {{Lot Instance Segmentation}} from {{Satellite Imagery}} through {{Associative Embeddings}}},
+  booktitle = {Proceedings of the 27th {{ACM SIGSPATIAL International Conference}} on {{Advances}} in {{Geographic Information Systems}}},
+  author = {Berry, Tessa and Dronen, Nicholas and Jackson, Brett and Endres, Ian},
+  year = {2019},
+  month = nov,
+  series = {{{SIGSPATIAL}} '19},
+  pages = {528--531},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  doi = {10.1145/3347146.3359364},
+  urldate = {2024-06-23},
+  abstract = {In this paper, we apply the technique of instance segmentation through associative image embeddings using stacked hourglass networks to the problem of parking lot instance segmentation in satellite imagery. We sought an instance segmentation method that, unlike other common methods such as Mask R-CNN, was independent of object classification and robust to missing labeled instances. We demonstrate how associative image embeddings can be created, which can provide instance segmentation for use with any semantic segmentation map.},
+  isbn = {978-1-4503-6909-1},
+  keywords = {associative embedding,deep learning,instance segmentation,parking lots,satellite imagery}
+}
+
+@inproceedings{Berry:ParkingLot:2019a,
+  title = {Parking {{Lot Instance Segmentation}} from {{Satellite Imagery}} through {{Associative Embeddings}}},
+  booktitle = {Proceedings of the 27th {{ACM SIGSPATIAL International Conference}} on {{Advances}} in {{Geographic Information Systems}}},
+  author = {Berry, Tessa and Dronen, Nicholas and Jackson, Brett and Endres, Ian},
+  year = {2019},
+  month = nov,
+  series = {{{SIGSPATIAL}} '19},
+  pages = {528--531},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  doi = {10.1145/3347146.3359364},
+  urldate = {2024-06-24},
+  abstract = {In this paper, we apply the technique of instance segmentation through associative image embeddings using stacked hourglass networks to the problem of parking lot instance segmentation in satellite imagery. We sought an instance segmentation method that, unlike other common methods such as Mask R-CNN, was independent of object classification and robust to missing labeled instances. We demonstrate how associative image embeddings can be created, which can provide instance segmentation for use with any semantic segmentation map.},
+  isbn = {978-1-4503-6909-1}
 }
 
 @inproceedings{Beykaei:EvaluatingAccuracy:2010,
@@ -442,6 +503,23 @@
   urldate = {2024-02-07},
   abstract = {The primary objective of this paper is to quantify the areal footprint of parking lots across a four state region including Illinois, Indiana, Michigan and Wisconsin located in the Upper Great Lakes Basin. Parking lots are virtually everywhere in urban and suburban environments, are often larger than the building footprints they serve yet they are largely unregulated on a regional scale. We focus on a method that estimates parking lot coverage over the four state region and use independent studies to estimate model parameters and validate our model. In total, we estimate that the states of Illinois, Indiana, Michigan and Wisconsin allocate 1260km2 of their land to parking lots, with the lower bound of the estimate at 976km2 and the upper bound at 1745km2. This accounts for approximately 4.97\% of urban land use and over 43 million parking spaces whereas the number of adults over 18 years old in these four states amounted to just over 25 million. The estimated number of spaces per vehicle in each state ranges from 2.49 in Indiana to 2.95 in Michigan. Within the four states studied, states that had a higher proportion of their urban land devoted to parking lots were states where urban sprawl was more prevalent.},
   keywords = {Environment,Footprint,Impervious surface,Parking,Sprawl,Urbanization}
+}
+
+@article{deAlmeida:PKLotRobust:2015,
+  title = {{{PKLot}} -- {{A}} Robust Dataset for Parking Lot Classification},
+  author = {{de Almeida}, Paulo R. L. and Oliveira, Luiz S. and Britto, Alceu S. and Silva, Eunelson J. and Koerich, Alessandro L.},
+  year = {2015},
+  month = jul,
+  journal = {Expert Systems with Applications},
+  volume = {42},
+  number = {11},
+  pages = {4937--4949},
+  issn = {0957-4174},
+  doi = {10.1016/j.eswa.2015.02.009},
+  urldate = {2024-06-24},
+  abstract = {Outdoor parking lot vacancy detection systems have attracted a great deal of attention in the last decade due the large number of practical applications. However, a common problem that researchers in this field very often face is the lack of a representative dataset to perform their experiments. To mitigate this difficulty, in this paper we introduce a new parking lot dataset composed of 695,899 images captured from two parking lots with three different camera views. The acquisition protocol allows obtaining static images showing illumination variance related to sunny, overcast and rainy days. We believe that researchers will find this dataset a very useful tool since it allows future benchmarking and evaluation. The dataset is currently available for research purposes upon request. To gain a better insight into this dataset we have evaluated two textural descriptors, Local Binary Patterns and Local Phase Quantization, with a Support Vector Machine classifier to detect parking lot vacancy. In the experiments where the same view was used for both training and testing, we have reached outstanding recognition rates, greater than 99\%. The main challenge, though, lies in building a general classifier that is able to detect parking spaces from the parking lots that were not used for training. In this sense, the best result achieved by the texture-based classifier was about 89\%. The observed drop in terms of performance shows that additional investigation is necessary to create classification schemes less dependent on the training set. Other researchers can use these results as a baseline performance when testing their own algorithms on this dataset.},
+  keywords = {Parking space classification,Parking space dataset,Parking space detection,Textural-based descriptors},
+  file = {C:\Users\paulc\Zotero\storage\BSMBB8NK\S0957417415001086.html}
 }
 
 @article{DeGruyter:ApartmentResidents:2023,
@@ -1178,6 +1256,23 @@
   file = {C:\Users\paulc\Zotero\storage\VJEKPF8Z\Le stationnement dans la métropole bâtir des conn.pdf}
 }
 
+@inproceedings{Newell:StackedHourglass:2016,
+  title = {Stacked {{Hourglass Networks}} for {{Human Pose Estimation}}},
+  booktitle = {Computer {{Vision}} -- {{ECCV}} 2016},
+  author = {Newell, Alejandro and Yang, Kaiyu and Deng, Jia},
+  editor = {Leibe, Bastian and Matas, Jiri and Sebe, Nicu and Welling, Max},
+  year = {2016},
+  pages = {483--499},
+  publisher = {Springer International Publishing},
+  address = {Cham},
+  doi = {10.1007/978-3-319-46484-8_29},
+  abstract = {This work introduces a novel convolutional network architecture for the task of human pose estimation. Features are processed across all scales and consolidated to best capture the various spatial relationships associated with the body. We show how repeated bottom-up, top-down processing used in conjunction with intermediate supervision is critical to improving the performance of the network. We refer to the architecture as a ``stacked hourglass'' network based on the successive steps of pooling and upsampling that are done to produce a final set of predictions. State-of-the-art results are achieved on the FLIC and MPII benchmarks outcompeting all recent methods.},
+  isbn = {978-3-319-46484-8},
+  langid = {english},
+  keywords = {Human pose estimation},
+  file = {C:\Users\paulc\Zotero\storage\437KY3JI\Newell et al. - 2016 - Stacked Hourglass Networks for Human Pose Estimati.pdf}
+}
+
 @mastersthesis{Pesek:MaskRCNN:2018,
   title = {Mask {{R-CNN}} in {{GRASS GIS}}},
   author = {Pe{\v s}ek, Bc Ond{\v r}ej},
@@ -1229,6 +1324,24 @@
   langid = {english},
   keywords = {buildings,embedded environmental effects,greenhouse gas (GHG) emissions,industrial ecology,sustainable city,urban infrastructure growth},
   file = {C\:\\Users\\paulc\\Zotero\\storage\\3JTKF25I\\Reyna et Chester - 2015 - The Growth of Urban Building Stock Unintended Loc.pdf;C\:\\Users\\paulc\\Zotero\\storage\\FW4YYPIS\\jiec.html}
+}
+
+@inproceedings{Ronneberger:UNetConvolutional:2015,
+  title = {U-{{Net}}: {{Convolutional Networks}} for {{Biomedical Image Segmentation}}},
+  shorttitle = {U-{{Net}}},
+  booktitle = {Medical {{Image Computing}} and {{Computer-Assisted Intervention}} -- {{MICCAI}} 2015},
+  author = {Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
+  editor = {Navab, Nassir and Hornegger, Joachim and Wells, William M. and Frangi, Alejandro F.},
+  year = {2015},
+  pages = {234--241},
+  publisher = {Springer International Publishing},
+  address = {Cham},
+  doi = {10.1007/978-3-319-24574-4_28},
+  abstract = {There is large consent that successful training of deep networks requires many thousand annotated training samples. In this paper, we present a network and training strategy that relies on the strong use of data augmentation to use the available annotated samples more efficiently. The architecture consists of a contracting path to capture context and a symmetric expanding path that enables precise localization. We show that such a network can be trained end-to-end from very few images and outperforms the prior best method (a sliding-window convolutional network) on the ISBI challenge for segmentation of neuronal structures in electron microscopic stacks. Using the same network trained on transmitted light microscopy images (phase contrast and DIC) we won the ISBI cell tracking challenge 2015 in these categories by a large margin. Moreover, the network is fast. Segmentation of a 512x512 image takes less than a second on a recent GPU. The full implementation (based on Caffe) and the trained networks are available at http://lmb.informatik.uni-freiburg.de/people/ronneber/u-net.},
+  isbn = {978-3-319-24574-4},
+  langid = {english},
+  keywords = {Convolutional Layer,Data Augmentation,Deep Network,Ground Truth Segmentation,Training Image},
+  file = {C:\Users\paulc\Zotero\storage\S37JJT37\Ronneberger et al. - 2015 - U-Net Convolutional Networks for Biomedical Image.pdf}
 }
 
 @techreport{Scharnhorst:QuantifiedParking:2018,
@@ -1564,6 +1677,21 @@
   keywords = {binary logistic model,built environment,car ownership and use,China,CITY,COMMUTER MODE CHOICE,DETERMINANTS,EMISSIONS,LAND-USE,parking availability,SELF-SELECTION,SUBSIDIES,TRAVEL BEHAVIOR,VEHICLE OWNERSHIP},
   annotation = {Web of Science ID: WOS:000440947600176},
   file = {C:\Users\paulc\Zotero\storage\TX72D978\Yin et al. - 2018 - Built Environment and Parking Availability Impact.pdf}
+}
+
+@inproceedings{Yin:ContextenrichedSatellite:2022,
+  title = {A {{Context-enriched Satellite Imagery Dataset}} and an {{Approach}} for {{Parking Lot Detection}}},
+  booktitle = {2022 {{IEEE}}/{{CVF Winter Conference}} on {{Applications}} of {{Computer Vision}} ({{WACV}})},
+  author = {Yin, Yifang and Hu, Wenmiao and Tran, An and Kruppa, Hannes and Zimmermann, Roger and Ng, See-Kiong},
+  year = {2022},
+  month = jan,
+  pages = {1391--1400},
+  issn = {2642-9381},
+  doi = {10.1109/WACV51458.2022.00146},
+  urldate = {2024-06-23},
+  abstract = {Automatic detection of geoinformation from satellite images has been a fundamental yet challenging problem, which aims to reduce the manual effort of human annotators in maintaining an up-to-date digital map. There are currently several high-resolution satellite imagery datasets that are publicly available. However, the associated ground-truth annotations are limited to road, building, and land use, while the annotations of other geographic objects or attributes are mostly not available. To bridge the gap, we present Grab-Pklot, the first high-resolution and context-enriched satellite imagery dataset for parking lot detection. Our dataset consists of 1344 satellite images with the ground-truth annotations of carparks in Singapore. Motivated by the observation that carparks are mostly co-appear with other geographic objects, we associate each satellite image in our dataset with the surrounding contextual information of road and building, given in the format of multi-channel images. As a side contribution, we present a fusion-based segmentation approach to demonstrate that the parking lot detection accuracy can be improved by modeling the correlations between parking lots and other geographic objects. Experiments on our dataset provide baseline results as well as new insights into the challenges and opportunities in parking lot detection from satellite images.},
+  keywords = {Annotations,Buildings,Computer vision,Correlation,Datasets,Evaluation and Comparison of Vision Algorithms,Image segmentation,Roads,Satellites},
+  file = {C:\Users\paulc\Zotero\storage\HQZRKS6B\9707047.html}
 }
 
 @inproceedings{Young:AnalysisSpatial:2010,
