--- a/MemoireThese.sty
+++ b/MemoireThese.sty
@@ -120,7 +120,7 @@
   \def\@tempa{#2}%
   \ifx\@tempa\@empty\else
     {\let\\\space
-    \addcontentsline{lot}{table}{\protect\numberline{\fnum@table}{\ignorespaces #2}}}%
+    \addcontentsline{lot}{table}{\protect\numberline{\thetable}{\ignorespaces #2}}}%
   \fi}
 
 \def\LT@makecaption#1#2#3{%
