--- a/4-Sigles_Abrev.tex
+++ b/4-Sigles_Abrev.tex
@@ -15,6 +15,7 @@
   \acro{OSM}{OpenStreetMap}
   \acro{TC}{Transport en commun}
   \acro{PLUTO}{Primary Land Use Tax Lot Output}
+  \acro{IoU}{Intersection over Union}
 \end{acronym}
 %
 \begin{longtable}{lp{5in}}
@@ -24,5 +25,6 @@ CNN		   & Convolutionnal Neural Networks \\
 OSM     & OpenStreetMap \\
 TC      & Transport en Commun \\
 PLUTO   & Primary Land Use Tax Lot Output \\
+IoU & Intersection over Union\\
 \end{longtable}
 
